Fix broken collection cards in home section and improve SEO and accessibility

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta
-      name="The Rage Lab"
-      content="Phone cases built for the bold"
+      name="description"
+      content="The Rage Lab. Phone cases built for the bold"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
@@ -40,7 +40,7 @@
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
     
-    <script src="https://kit.fontawesome.com/92d46d99be.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/92d46d99be.js" crossorigin="anonymous" defer></script>
     <title>The Rage Lab</title>
   </head>
   <body>
